<resources>
    <string name="app_name">Travel Northern Taiwan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="promt_repeat_password">Repeat Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="language_button">Language</string>
    <string name="my_trips">My Trips</string>
    <string name="weather">Weather</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign out</string>
    <string name="about_us">About us</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_trip_information">MyTripInformation</string>
</resources>
